# flowupdater-json-creator

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  mods_list.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: build.yml  crates-io.yml  release.yaml
projects/api/: Cargo.toml  README.md
projects/api/src/: errors.rs  lib.rs
projects/api/src/curse_api/: mod.rs  modloader.rs  mods.rs
projects/api/src/minecraft/: mod.rs
projects/cli/: Cargo.toml
projects/cli/src/: constants.rs  curse_api.rs.old  errors.rs  json_creator.rs  main.rs  main.rs.old
projects/cli/src/curse_api/: minecraft.rs  mod.rs  mods.rs
projects/cli/src/minecraft/: mod.rs  modloader.rs
projects/cli/src/questions/: local_mods.rs  mc_versions.rs  mod.rs  modloader.rs  mods.rs
projects/gui/: Cargo.toml  main.rs
projects/gui/src/gui/: minecraft.rs  mod.rs
projects/gui/ui/: main.qml
projects/gui/ui/pages/: Greeting.qml  MCVersion.qml  ModLoader.qml  PageLayout.qml
src/: curse_api.rs  errors.rs  json_creator.rs  main.rs
src/apis/: mod.rs
src/apis/common/: mod.rs  modloaders.rs
src/apis/curse/: mod.rs
src/apis/modrinth/: mod.rs
src/curse_api/: modloader.rs
src/entries/: mcp_entry.rs  mod.rs  mods_entry.rs
src/minecraft/: minecraft.rs  mod.rs  modloader.rs
src/questions/: mc_versions.rs  mod.rs  modloader.rs
