[package]
name = "fujc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.1.13"
console = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.34", features = ["serde-well-known"] }
reqwest = { version = "0.11.26", features = ["json"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
