[package]
name = "fujc-api"
description = "A Wrapper of the Curseforge api for FlowUpdater JSON Creator"
homepage = "https://github.com/zuygui/flowupdater-json-creator"
repository = "https://github.com/zuygui/flowupdater-json-creator"
authors = ["Zuygui", "Bricklou"]
keywords = ["curseforge", "api", "flowupdater", "json", "fujc"]
categories = ["api-wrapper", "curseforge", "flowupdater", "json"]
license = "MIT"
version = "1.1.1"
edition = "2021"

[lib]
name = "fujc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde_json = { version = "1.0.96" }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
openssl = { version = "0.10", features = ["vendored"] }
thiserror = { version = "1" }
