[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2"
qmetaobject = "0.2"
pretty_env_logger = "0.5"
log = "0.4"
fujc-api = "1.1.1"

# configure optimization for release
[profile.release]
strip = true
opt-level = 'z'
lto = true
panic = "abort"